# SupportMind

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  generate_repo.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
scripts/: demo.py  evaluate.py  ingest_data.py
supportmind/: __init__.py  cli.py
supportmind/analytics/: __init__.py  metrics.py
supportmind/api/: __init__.py  copilot.py  endpoints.py
supportmind/config/: __init__.py  prompts.py  settings.py
supportmind/ingest/: __init__.py  loader.py
supportmind/models/: __init__.py  schemas.py
supportmind/pipelines/: __init__.py  learning.py  quality.py  rag.py  retrieval.py
supportmind/stores/: __init__.py  database.py  vector_store.py
supportmind/utils/: __init__.py  helpers.py
tests/: conftest.py  test_retrieval.py
